Procesadores_lenguaje/Pfinal_procesadores_lenguaje-main/calc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement SALTO_LINEA statements
Rule 2     statements -> statement
Rule 3     statement -> <empty>
Rule 4     statement -> asignacion
Rule 5     statement -> declaracion
Rule 6     statement -> vectores
Rule 7     statement -> registros
Rule 8     statement -> def_funcion
Rule 9     statement -> uso_funcion
Rule 10    statement -> condicionales
Rule 11    statement -> bucles
Rule 12    statement -> logico
Rule 13    declaracion -> tipo names
Rule 14    declaracion -> VECTOR tipo NAME [ NUMBER ]
Rule 15    declaracion -> REGISTRO NAME { atributos }
Rule 16    asignacion -> tipo NAME Igualdad logico
Rule 17    asignacion -> NAME Igualdad logico
Rule 18    names -> NAME , names
Rule 19    names -> NAME
Rule 20    tipo -> BOOLEANO
Rule 21    tipo -> ENTERO
Rule 22    tipo -> REAL
Rule 23    tipo -> CARACTER
Rule 24    tipo -> REGISTRO
Rule 25    tipo -> VECTOR
Rule 26    tipo -> NAME
Rule 27    vectores -> NAME [ NUMBER ] Igualdad logico
Rule 28    registros -> NAME . NAME Igualdad logico
Rule 29    registros -> NAME NAME
Rule 30    atributos -> tipo campos ; atributos
Rule 31    atributos -> tipo campos ;
Rule 32    campos -> NAME , campos
Rule 33    campos -> NAME
Rule 34    def_funcion -> FUNCION NAME ( list_args ) : tipo { blq_sentencia DEVOLVER blq_sentencia }
Rule 35    uso_funcion -> NAME ( argumentos )
Rule 36    list_args -> tipo NAME , list_args
Rule 37    list_args -> tipo NAME
Rule 38    list_args -> empty
Rule 39    blq_sentencia -> statement SALTO_LINEA blq_sentencia
Rule 40    blq_sentencia -> statement
Rule 41    argumentos -> argumentos , operando
Rule 42    argumentos -> operando
Rule 43    argumentos -> empty
Rule 44    condicionales -> SI blq_sentencia ENTONCES blq_sentencia FINSI
Rule 45    condicionales -> SI blq_sentencia ENTONCES blq_sentencia SINO blq_sentencia FINSI
Rule 46    bucles -> MIENTRAS logico blq_sentencia FINMIENTRAS
Rule 47    empty -> <empty>
Rule 48    restriccion -> restriccion comparador expression
Rule 49    restriccion -> expression
Rule 50    logico -> logico condicion restriccion
Rule 51    logico -> restriccion
Rule 52    comparador -> IgualIgual
Rule 53    comparador -> MenorIgual
Rule 54    comparador -> MayorIgual
Rule 55    comparador -> Igualdad
Rule 56    comparador -> <
Rule 57    comparador -> >
Rule 58    condicion -> OR
Rule 59    condicion -> AND
Rule 60    condicion -> NOT
Rule 61    condicion -> !
Rule 62    condicion -> &
Rule 63    condicion -> |
Rule 64    expression -> multiplicador
Rule 65    multiplicador -> operando
Rule 66    expression -> expression + multiplicador
Rule 67    expression -> expression - multiplicador
Rule 68    operando -> NUMBER
Rule 69    operando -> CHAR
Rule 70    operando -> CIERTO
Rule 71    operando -> FALSO
Rule 72    operando -> ( expression )
Rule 73    operando -> + operando
Rule 74    operando -> - operando
Rule 75    operando -> NAME [ NUMBER ]
Rule 76    operando -> NAME . operando
Rule 77    operando -> LONG
Rule 78    multiplicador -> multiplicador * operando
Rule 79    multiplicador -> multiplicador / operando
Rule 80    operando -> EXPONENCIAL ( NUMBER )
Rule 81    operando -> LOGARITMICA ( NUMBER )
Rule 82    operando -> SENO ( NUMBER )
Rule 83    operando -> COSENO ( NUMBER )
Rule 84    operando -> NAME

Terminals, with rules where they appear

!                    : 61
&                    : 62
(                    : 34 35 72 80 81 82 83
)                    : 34 35 72 80 81 82 83
*                    : 78
+                    : 66 73
,                    : 18 32 36 41
-                    : 67 74
.                    : 28 76
/                    : 79
:                    : 34
;                    : 30 31
<                    : 56
>                    : 57
AND                  : 59
BOOLEANO             : 20
CARACTER             : 23
CHAR                 : 69
CIERTO               : 70
COSENO               : 83
DEVOLVER             : 34
ENTERO               : 21
ENTONCES             : 44 45
EXPONENCIAL          : 80
FALSO                : 71
FINMIENTRAS          : 46
FINSI                : 44 45
FUNCION              : 34
IgualIgual           : 52
Igualdad             : 16 17 27 28 55
LOGARITMICA          : 81
LONG                 : 77
MIENTRAS             : 46
MayorIgual           : 54
MenorIgual           : 53
NAME                 : 14 15 16 17 18 19 26 27 28 28 29 29 32 33 34 35 36 37 75 76 84
NOT                  : 60
NUMBER               : 14 27 68 75 80 81 82 83
OR                   : 58
REAL                 : 22
REGISTRO             : 15 24
SALTO_LINEA          : 1 39
SENO                 : 82
SI                   : 44 45
SINO                 : 45
VECTOR               : 14 25
[                    : 14 27 75
]                    : 14 27 75
error                : 
{                    : 15 34
|                    : 63
}                    : 15 34

Nonterminals, with rules where they appear

argumentos           : 35 41
asignacion           : 4
atributos            : 15 30
blq_sentencia        : 34 34 39 44 44 45 45 45 46
bucles               : 11
campos               : 30 31 32
comparador           : 48
condicion            : 50
condicionales        : 10
declaracion          : 5
def_funcion          : 8
empty                : 38 43
expression           : 48 49 66 67 72
list_args            : 34 36
logico               : 12 16 17 27 28 46 50
multiplicador        : 64 66 67 78 79
names                : 13 18
operando             : 41 42 65 73 74 76 78 79
registros            : 7
restriccion          : 48 50 51
statement            : 1 2 39 40
statements           : 1 0
tipo                 : 13 14 16 30 31 34 36 37
uso_funcion          : 9
vectores             : 6

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement SALTO_LINEA statements
    (2) statements -> . statement
    (3) statement -> .
    (4) statement -> . asignacion
    (5) statement -> . declaracion
    (6) statement -> . vectores
    (7) statement -> . registros
    (8) statement -> . def_funcion
    (9) statement -> . uso_funcion
    (10) statement -> . condicionales
    (11) statement -> . bucles
    (12) statement -> . logico
    (16) asignacion -> . tipo NAME Igualdad logico
    (17) asignacion -> . NAME Igualdad logico
    (13) declaracion -> . tipo names
    (14) declaracion -> . VECTOR tipo NAME [ NUMBER ]
    (15) declaracion -> . REGISTRO NAME { atributos }
    (27) vectores -> . NAME [ NUMBER ] Igualdad logico
    (28) registros -> . NAME . NAME Igualdad logico
    (29) registros -> . NAME NAME
    (34) def_funcion -> . FUNCION NAME ( list_args ) : tipo { blq_sentencia DEVOLVER blq_sentencia }
    (35) uso_funcion -> . NAME ( argumentos )
    (44) condicionales -> . SI blq_sentencia ENTONCES blq_sentencia FINSI
    (45) condicionales -> . SI blq_sentencia ENTONCES blq_sentencia SINO blq_sentencia FINSI
    (46) bucles -> . MIENTRAS logico blq_sentencia FINMIENTRAS
    (50) logico -> . logico condicion restriccion
    (51) logico -> . restriccion
    (20) tipo -> . BOOLEANO
    (21) tipo -> . ENTERO
    (22) tipo -> . REAL
    (23) tipo -> . CARACTER
    (24) tipo -> . REGISTRO
    (25) tipo -> . VECTOR
    (26) tipo -> . NAME
    (48) restriccion -> . restriccion comparador expression
    (49) restriccion -> . expression
    (64) expression -> . multiplicador
    (66) expression -> . expression + multiplicador
    (67) expression -> . expression - multiplicador
    (65) multiplicador -> . operando
    (78) multiplicador -> . multiplicador * operando
    (79) multiplicador -> . multiplicador / operando
    (68) operando -> . NUMBER
    (69) operando -> . CHAR
    (70) operando -> . CIERTO
    (71) operando -> . FALSO
    (72) operando -> . ( expression )
    (73) operando -> . + operando
    (74) operando -> . - operando
    (75) operando -> . NAME [ NUMBER ]
    (76) operando -> . NAME . operando
    (77) operando -> . LONG
    (80) operando -> . EXPONENCIAL ( NUMBER )
    (81) operando -> . LOGARITMICA ( NUMBER )
    (82) operando -> . SENO ( NUMBER )
    (83) operando -> . COSENO ( NUMBER )
    (84) operando -> . NAME

    SALTO_LINEA     reduce using rule 3 (statement -> .)
    $end            reduce using rule 3 (statement -> .)
    NAME            shift and go to state 13
    VECTOR          shift and go to state 14
    REGISTRO        shift and go to state 16
    FUNCION         shift and go to state 17
    SI              shift and go to state 19
    MIENTRAS        shift and go to state 20
    BOOLEANO        shift and go to state 22
    ENTERO          shift and go to state 23
    REAL            shift and go to state 24
    CARACTER        shift and go to state 25
    NUMBER          shift and go to state 15
    CHAR            shift and go to state 31
    CIERTO          shift and go to state 32
    FALSO           shift and go to state 33
    (               shift and go to state 18
    +               shift and go to state 28
    -               shift and go to state 29
    LONG            shift and go to state 34
    EXPONENCIAL     shift and go to state 35
    LOGARITMICA     shift and go to state 36
    SENO            shift and go to state 37
    COSENO          shift and go to state 38

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    asignacion                     shift and go to state 3
    declaracion                    shift and go to state 4
    vectores                       shift and go to state 5
    registros                      shift and go to state 6
    def_funcion                    shift and go to state 7
    uso_funcion                    shift and go to state 8
    condicionales                  shift and go to state 9
    bucles                         shift and go to state 10
    logico                         shift and go to state 11
    tipo                           shift and go to state 12
    restriccion                    shift and go to state 21
    expression                     shift and go to state 26
    multiplicador                  shift and go to state 27
    operando                       shift and go to state 30

state 1

    (0) S' -> statements .



state 2

    (1) statements -> statement . SALTO_LINEA statements
    (2) statements -> statement .

    SALTO_LINEA     shift and go to state 39
    $end            reduce using rule 2 (statements -> statement .)


state 3

    (4) statement -> asignacion .

    SALTO_LINEA     reduce using rule 4 (statement -> asignacion .)
    $end            reduce using rule 4 (statement -> asignacion .)
    ENTONCES        reduce using rule 4 (statement -> asignacion .)
    FINMIENTRAS     reduce using rule 4 (statement -> asignacion .)
    FINSI           reduce using rule 4 (statement -> asignacion .)
    SINO            reduce using rule 4 (statement -> asignacion .)
    DEVOLVER        reduce using rule 4 (statement -> asignacion .)
    }               reduce using rule 4 (statement -> asignacion .)


state 4

    (5) statement -> declaracion .

    SALTO_LINEA     reduce using rule 5 (statement -> declaracion .)
    $end            reduce using rule 5 (statement -> declaracion .)
    ENTONCES        reduce using rule 5 (statement -> declaracion .)
    FINMIENTRAS     reduce using rule 5 (statement -> declaracion .)
    FINSI           reduce using rule 5 (statement -> declaracion .)
    SINO            reduce using rule 5 (statement -> declaracion .)
    DEVOLVER        reduce using rule 5 (statement -> declaracion .)
    }               reduce using rule 5 (statement -> declaracion .)


state 5

    (6) statement -> vectores .

    SALTO_LINEA     reduce using rule 6 (statement -> vectores .)
    $end            reduce using rule 6 (statement -> vectores .)
    ENTONCES        reduce using rule 6 (statement -> vectores .)
    FINMIENTRAS     reduce using rule 6 (statement -> vectores .)
    FINSI           reduce using rule 6 (statement -> vectores .)
    SINO            reduce using rule 6 (statement -> vectores .)
    DEVOLVER        reduce using rule 6 (statement -> vectores .)
    }               reduce using rule 6 (statement -> vectores .)


state 6

    (7) statement -> registros .

    SALTO_LINEA     reduce using rule 7 (statement -> registros .)
    $end            reduce using rule 7 (statement -> registros .)
    ENTONCES        reduce using rule 7 (statement -> registros .)
    FINMIENTRAS     reduce using rule 7 (statement -> registros .)
    FINSI           reduce using rule 7 (statement -> registros .)
    SINO            reduce using rule 7 (statement -> registros .)
    DEVOLVER        reduce using rule 7 (statement -> registros .)
    }               reduce using rule 7 (statement -> registros .)


state 7

    (8) statement -> def_funcion .

    SALTO_LINEA     reduce using rule 8 (statement -> def_funcion .)
    $end            reduce using rule 8 (statement -> def_funcion .)
    ENTONCES        reduce using rule 8 (statement -> def_funcion .)
    FINMIENTRAS     reduce using rule 8 (statement -> def_funcion .)
    FINSI           reduce using rule 8 (statement -> def_funcion .)
    SINO            reduce using rule 8 (statement -> def_funcion .)
    DEVOLVER        reduce using rule 8 (statement -> def_funcion .)
    }               reduce using rule 8 (statement -> def_funcion .)


state 8

    (9) statement -> uso_funcion .

    SALTO_LINEA     reduce using rule 9 (statement -> uso_funcion .)
    $end            reduce using rule 9 (statement -> uso_funcion .)
    ENTONCES        reduce using rule 9 (statement -> uso_funcion .)
    FINMIENTRAS     reduce using rule 9 (statement -> uso_funcion .)
    FINSI           reduce using rule 9 (statement -> uso_funcion .)
    SINO            reduce using rule 9 (statement -> uso_funcion .)
    DEVOLVER        reduce using rule 9 (statement -> uso_funcion .)
    }               reduce using rule 9 (statement -> uso_funcion .)


state 9

    (10) statement -> condicionales .

    SALTO_LINEA     reduce using rule 10 (statement -> condicionales .)
    $end            reduce using rule 10 (statement -> condicionales .)
    ENTONCES        reduce using rule 10 (statement -> condicionales .)
    FINMIENTRAS     reduce using rule 10 (statement -> condicionales .)
    FINSI           reduce using rule 10 (statement -> condicionales .)
    SINO            reduce using rule 10 (statement -> condicionales .)
    DEVOLVER        reduce using rule 10 (statement -> condicionales .)
    }               reduce using rule 10 (statement -> condicionales .)


state 10

    (11) statement -> bucles .

    SALTO_LINEA     reduce using rule 11 (statement -> bucles .)
    $end            reduce using rule 11 (statement -> bucles .)
    ENTONCES        reduce using rule 11 (statement -> bucles .)
    FINMIENTRAS     reduce using rule 11 (statement -> bucles .)
    FINSI           reduce using rule 11 (statement -> bucles .)
    SINO            reduce using rule 11 (statement -> bucles .)
    DEVOLVER        reduce using rule 11 (statement -> bucles .)
    }               reduce using rule 11 (statement -> bucles .)


state 11

    (12) statement -> logico .
    (50) logico -> logico . condicion restriccion
    (58) condicion -> . OR
    (59) condicion -> . AND
    (60) condicion -> . NOT
    (61) condicion -> . !
    (62) condicion -> . &
    (63) condicion -> . |

    SALTO_LINEA     reduce using rule 12 (statement -> logico .)
    $end            reduce using rule 12 (statement -> logico .)
    ENTONCES        reduce using rule 12 (statement -> logico .)
    FINMIENTRAS     reduce using rule 12 (statement -> logico .)
    FINSI           reduce using rule 12 (statement -> logico .)
    SINO            reduce using rule 12 (statement -> logico .)
    DEVOLVER        reduce using rule 12 (statement -> logico .)
    }               reduce using rule 12 (statement -> logico .)
    OR              shift and go to state 41
    AND             shift and go to state 42
    NOT             shift and go to state 43
    !               shift and go to state 44
    &               shift and go to state 45
    |               shift and go to state 46

    condicion                      shift and go to state 40

state 12

    (16) asignacion -> tipo . NAME Igualdad logico
    (13) declaracion -> tipo . names
    (18) names -> . NAME , names
    (19) names -> . NAME

    NAME            shift and go to state 47

    names                          shift and go to state 48

state 13

    (17) asignacion -> NAME . Igualdad logico
    (27) vectores -> NAME . [ NUMBER ] Igualdad logico
    (28) registros -> NAME . . NAME Igualdad logico
    (29) registros -> NAME . NAME
    (35) uso_funcion -> NAME . ( argumentos )
    (26) tipo -> NAME .
    (75) operando -> NAME . [ NUMBER ]
    (76) operando -> NAME . . operando
    (84) operando -> NAME .

  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for Igualdad resolved as shift
    Igualdad        shift and go to state 50
    [               shift and go to state 51
    .               shift and go to state 52
    NAME            shift and go to state 49
    (               shift and go to state 53
    *               reduce using rule 84 (operando -> NAME .)
    /               reduce using rule 84 (operando -> NAME .)
    +               reduce using rule 84 (operando -> NAME .)
    -               reduce using rule 84 (operando -> NAME .)
    IgualIgual      reduce using rule 84 (operando -> NAME .)
    MenorIgual      reduce using rule 84 (operando -> NAME .)
    MayorIgual      reduce using rule 84 (operando -> NAME .)
    <               reduce using rule 84 (operando -> NAME .)
    >               reduce using rule 84 (operando -> NAME .)
    OR              reduce using rule 84 (operando -> NAME .)
    AND             reduce using rule 84 (operando -> NAME .)
    NOT             reduce using rule 84 (operando -> NAME .)
    !               reduce using rule 84 (operando -> NAME .)
    &               reduce using rule 84 (operando -> NAME .)
    |               reduce using rule 84 (operando -> NAME .)
    SALTO_LINEA     reduce using rule 84 (operando -> NAME .)
    $end            reduce using rule 84 (operando -> NAME .)
    ENTONCES        reduce using rule 84 (operando -> NAME .)
    FINMIENTRAS     reduce using rule 84 (operando -> NAME .)
    FINSI           reduce using rule 84 (operando -> NAME .)
    SINO            reduce using rule 84 (operando -> NAME .)
    DEVOLVER        reduce using rule 84 (operando -> NAME .)
    }               reduce using rule 84 (operando -> NAME .)

  ! NAME            [ reduce using rule 26 (tipo -> NAME .) ]
  ! Igualdad        [ reduce using rule 84 (operando -> NAME .) ]


state 14

    (14) declaracion -> VECTOR . tipo NAME [ NUMBER ]
    (25) tipo -> VECTOR .
    (20) tipo -> . BOOLEANO
    (21) tipo -> . ENTERO
    (22) tipo -> . REAL
    (23) tipo -> . CARACTER
    (24) tipo -> . REGISTRO
    (25) tipo -> . VECTOR
    (26) tipo -> . NAME

  ! shift/reduce conflict for NAME resolved as shift
    BOOLEANO        shift and go to state 22
    ENTERO          shift and go to state 23
    REAL            shift and go to state 24
    CARACTER        shift and go to state 25
    REGISTRO        shift and go to state 57
    VECTOR          shift and go to state 54
    NAME            shift and go to state 56

  ! NAME            [ reduce using rule 25 (tipo -> VECTOR .) ]

    tipo                           shift and go to state 55

state 15

    (68) operando -> NUMBER .

    *               reduce using rule 68 (operando -> NUMBER .)
    /               reduce using rule 68 (operando -> NUMBER .)
    +               reduce using rule 68 (operando -> NUMBER .)
    -               reduce using rule 68 (operando -> NUMBER .)
    IgualIgual      reduce using rule 68 (operando -> NUMBER .)
    MenorIgual      reduce using rule 68 (operando -> NUMBER .)
    MayorIgual      reduce using rule 68 (operando -> NUMBER .)
    Igualdad        reduce using rule 68 (operando -> NUMBER .)
    <               reduce using rule 68 (operando -> NUMBER .)
    >               reduce using rule 68 (operando -> NUMBER .)
    OR              reduce using rule 68 (operando -> NUMBER .)
    AND             reduce using rule 68 (operando -> NUMBER .)
    NOT             reduce using rule 68 (operando -> NUMBER .)
    !               reduce using rule 68 (operando -> NUMBER .)
    &               reduce using rule 68 (operando -> NUMBER .)
    |               reduce using rule 68 (operando -> NUMBER .)
    SALTO_LINEA     reduce using rule 68 (operando -> NUMBER .)
    $end            reduce using rule 68 (operando -> NUMBER .)
    )               reduce using rule 68 (operando -> NUMBER .)
    ENTONCES        reduce using rule 68 (operando -> NUMBER .)
    NAME            reduce using rule 68 (operando -> NUMBER .)
    VECTOR          reduce using rule 68 (operando -> NUMBER .)
    REGISTRO        reduce using rule 68 (operando -> NUMBER .)
    FUNCION         reduce using rule 68 (operando -> NUMBER .)
    SI              reduce using rule 68 (operando -> NUMBER .)
    MIENTRAS        reduce using rule 68 (operando -> NUMBER .)
    BOOLEANO        reduce using rule 68 (operando -> NUMBER .)
    ENTERO          reduce using rule 68 (operando -> NUMBER .)
    REAL            reduce using rule 68 (operando -> NUMBER .)
    CARACTER        reduce using rule 68 (operando -> NUMBER .)
    NUMBER          reduce using rule 68 (operando -> NUMBER .)
    CHAR            reduce using rule 68 (operando -> NUMBER .)
    CIERTO          reduce using rule 68 (operando -> NUMBER .)
    FALSO           reduce using rule 68 (operando -> NUMBER .)
    (               reduce using rule 68 (operando -> NUMBER .)
    LONG            reduce using rule 68 (operando -> NUMBER .)
    EXPONENCIAL     reduce using rule 68 (operando -> NUMBER .)
    LOGARITMICA     reduce using rule 68 (operando -> NUMBER .)
    SENO            reduce using rule 68 (operando -> NUMBER .)
    COSENO          reduce using rule 68 (operando -> NUMBER .)
    FINMIENTRAS     reduce using rule 68 (operando -> NUMBER .)
    FINSI           reduce using rule 68 (operando -> NUMBER .)
    SINO            reduce using rule 68 (operando -> NUMBER .)
    DEVOLVER        reduce using rule 68 (operando -> NUMBER .)
    }               reduce using rule 68 (operando -> NUMBER .)
    ,               reduce using rule 68 (operando -> NUMBER .)


state 16

    (15) declaracion -> REGISTRO . NAME { atributos }
    (24) tipo -> REGISTRO .

  ! shift/reduce conflict for NAME resolved as shift
    NAME            shift and go to state 58

  ! NAME            [ reduce using rule 24 (tipo -> REGISTRO .) ]


state 17

    (34) def_funcion -> FUNCION . NAME ( list_args ) : tipo { blq_sentencia DEVOLVER blq_sentencia }

    NAME            shift and go to state 59


state 18

    (72) operando -> ( . expression )
    (64) expression -> . multiplicador
    (66) expression -> . expression + multiplicador
    (67) expression -> . expression - multiplicador
    (65) multiplicador -> . operando
    (78) multiplicador -> . multiplicador * operando
    (79) multiplicador -> . multiplicador / operando
    (68) operando -> . NUMBER
    (69) operando -> . CHAR
    (70) operando -> . CIERTO
    (71) operando -> . FALSO
    (72) operando -> . ( expression )
    (73) operando -> . + operando
    (74) operando -> . - operando
    (75) operando -> . NAME [ NUMBER ]
    (76) operando -> . NAME . operando
    (77) operando -> . LONG
    (80) operando -> . EXPONENCIAL ( NUMBER )
    (81) operando -> . LOGARITMICA ( NUMBER )
    (82) operando -> . SENO ( NUMBER )
    (83) operando -> . COSENO ( NUMBER )
    (84) operando -> . NAME

    NUMBER          shift and go to state 15
    CHAR            shift and go to state 31
    CIERTO          shift and go to state 32
    FALSO           shift and go to state 33
    (               shift and go to state 18
    +               shift and go to state 28
    -               shift and go to state 29
    NAME            shift and go to state 61
    LONG            shift and go to state 34
    EXPONENCIAL     shift and go to state 35
    LOGARITMICA     shift and go to state 36
    SENO            shift and go to state 37
    COSENO          shift and go to state 38

    expression                     shift and go to state 60
    multiplicador                  shift and go to state 27
    operando                       shift and go to state 30

state 19

    (44) condicionales -> SI . blq_sentencia ENTONCES blq_sentencia FINSI
    (45) condicionales -> SI . blq_sentencia ENTONCES blq_sentencia SINO blq_sentencia FINSI
    (39) blq_sentencia -> . statement SALTO_LINEA blq_sentencia
    (40) blq_sentencia -> . statement
    (3) statement -> .
    (4) statement -> . asignacion
    (5) statement -> . declaracion
    (6) statement -> . vectores
    (7) statement -> . registros
    (8) statement -> . def_funcion
    (9) statement -> . uso_funcion
    (10) statement -> . condicionales
    (11) statement -> . bucles
    (12) statement -> . logico
    (16) asignacion -> . tipo NAME Igualdad logico
    (17) asignacion -> . NAME Igualdad logico
    (13) declaracion -> . tipo names
    (14) declaracion -> . VECTOR tipo NAME [ NUMBER ]
    (15) declaracion -> . REGISTRO NAME { atributos }
    (27) vectores -> . NAME [ NUMBER ] Igualdad logico
    (28) registros -> . NAME . NAME Igualdad logico
    (29) registros -> . NAME NAME
    (34) def_funcion -> . FUNCION NAME ( list_args ) : tipo { blq_sentencia DEVOLVER blq_sentencia }
    (35) uso_funcion -> . NAME ( argumentos )
    (44) condicionales -> . SI blq_sentencia ENTONCES blq_sentencia FINSI
    (45) condicionales -> . SI blq_sentencia ENTONCES blq_sentencia SINO blq_sentencia FINSI
    (46) bucles -> . MIENTRAS logico blq_sentencia FINMIENTRAS
    (50) logico -> . logico condicion restriccion
    (51) logico -> . restriccion
    (20) tipo -> . BOOLEANO
    (21) tipo -> . ENTERO
    (22) tipo -> . REAL
    (23) tipo -> . CARACTER
    (24) tipo -> . REGISTRO
    (25) tipo -> . VECTOR
    (26) tipo -> . NAME
    (48) restriccion -> . restriccion comparador expression
    (49) restriccion -> . expression
    (64) expression -> . multiplicador
    (66) expression -> . expression + multiplicador
    (67) expression -> . expression - multiplicador
    (65) multiplicador -> . operando
    (78) multiplicador -> . multiplicador * operando
    (79) multiplicador -> . multiplicador / operando
    (68) operando -> . NUMBER
    (69) operando -> . CHAR
    (70) operando -> . CIERTO
    (71) operando -> . FALSO
    (72) operando -> . ( expression )
    (73) operando -> . + operando
    (74) operando -> . - operando
    (75) operando -> . NAME [ NUMBER ]
    (76) operando -> . NAME . operando
    (77) operando -> . LONG
    (80) operando -> . EXPONENCIAL ( NUMBER )
    (81) operando -> . LOGARITMICA ( NUMBER )
    (82) operando -> . SENO ( NUMBER )
    (83) operando -> . COSENO ( NUMBER )
    (84) operando -> . NAME

    SALTO_LINEA     reduce using rule 3 (statement -> .)
    ENTONCES        reduce using rule 3 (statement -> .)
    NAME            shift and go to state 13
    VECTOR          shift and go to state 14
    REGISTRO        shift and go to state 16
    FUNCION         shift and go to state 17
    SI              shift and go to state 19
    MIENTRAS        shift and go to state 20
    BOOLEANO        shift and go to state 22
    ENTERO          shift and go to state 23
    REAL            shift and go to state 24
    CARACTER        shift and go to state 25
    NUMBER          shift and go to state 15
    CHAR            shift and go to state 31
    CIERTO          shift and go to state 32
    FALSO           shift and go to state 33
    (               shift and go to state 18
    +               shift and go to state 28
    -               shift and go to state 29
    LONG            shift and go to state 34
    EXPONENCIAL     shift and go to state 35
    LOGARITMICA     shift and go to state 36
    SENO            shift and go to state 37
    COSENO          shift and go to state 38

    blq_sentencia                  shift and go to state 62
    statement                      shift and go to state 63
    asignacion                     shift and go to state 3
    declaracion                    shift and go to state 4
    vectores                       shift and go to state 5
    registros                      shift and go to state 6
    def_funcion                    shift and go to state 7
    uso_funcion                    shift and go to state 8
    condicionales                  shift and go to state 9
    bucles                         shift and go to state 10
    logico                         shift and go to state 11
    tipo                           shift and go to state 12
    restriccion                    shift and go to state 21
    expression                     shift and go to state 26
    multiplicador                  shift and go to state 27
    operando                       shift and go to state 30

state 20

    (46) bucles -> MIENTRAS . logico blq_sentencia FINMIENTRAS
    (50) logico -> . logico condicion restriccion
    (51) logico -> . restriccion
    (48) restriccion -> . restriccion comparador expression
    (49) restriccion -> . expression
    (64) expression -> . multiplicador
    (66) expression -> . expression + multiplicador
    (67) expression -> . expression - multiplicador
    (65) multiplicador -> . operando
    (78) multiplicador -> . multiplicador * operando
    (79) multiplicador -> . multiplicador / operando
    (68) operando -> . NUMBER
    (69) operando -> . CHAR
    (70) operando -> . CIERTO
    (71) operando -> . FALSO
    (72) operando -> . ( expression )
    (73) operando -> . + operando
    (74) operando -> . - operando
    (75) operando -> . NAME [ NUMBER ]
    (76) operando -> . NAME . operando
    (77) operando -> . LONG
    (80) operando -> . EXPONENCIAL ( NUMBER )
    (81) operando -> . LOGARITMICA ( NUMBER )
    (82) operando -> . SENO ( NUMBER )
    (83) operando -> . COSENO ( NUMBER )
    (84) operando -> . NAME

    NUMBER          shift and go to state 15
    CHAR            shift and go to state 31
    CIERTO          shift and go to state 32
    FALSO           shift and go to state 33
    (               shift and go to state 18
    +               shift and go to state 28
    -               shift and go to state 29
    NAME            shift and go to state 61
    LONG            shift and go to state 34
    EXPONENCIAL     shift and go to state 35
    LOGARITMICA     shift and go to state 36
    SENO            shift and go to state 37
    COSENO          shift and go to state 38

    logico                         shift and go to state 64
    restriccion                    shift and go to state 21
    expression                     shift and go to state 26
    multiplicador                  shift and go to state 27
    operando                       shift and go to state 30

state 21

    (51) logico -> restriccion .
    (48) restriccion -> restriccion . comparador expression
    (52) comparador -> . IgualIgual
    (53) comparador -> . MenorIgual
    (54) comparador -> . MayorIgual
    (55) comparador -> . Igualdad
    (56) comparador -> . <
    (57) comparador -> . >

    OR              reduce using rule 51 (logico -> restriccion .)
    AND             reduce using rule 51 (logico -> restriccion .)
    NOT             reduce using rule 51 (logico -> restriccion .)
    !               reduce using rule 51 (logico -> restriccion .)
    &               reduce using rule 51 (logico -> restriccion .)
    |               reduce using rule 51 (logico -> restriccion .)
    SALTO_LINEA     reduce using rule 51 (logico -> restriccion .)
    $end            reduce using rule 51 (logico -> restriccion .)
    ENTONCES        reduce using rule 51 (logico -> restriccion .)
    NAME            reduce using rule 51 (logico -> restriccion .)
    VECTOR          reduce using rule 51 (logico -> restriccion .)
    REGISTRO        reduce using rule 51 (logico -> restriccion .)
    FUNCION         reduce using rule 51 (logico -> restriccion .)
    SI              reduce using rule 51 (logico -> restriccion .)
    MIENTRAS        reduce using rule 51 (logico -> restriccion .)
    BOOLEANO        reduce using rule 51 (logico -> restriccion .)
    ENTERO          reduce using rule 51 (logico -> restriccion .)
    REAL            reduce using rule 51 (logico -> restriccion .)
    CARACTER        reduce using rule 51 (logico -> restriccion .)
    NUMBER          reduce using rule 51 (logico -> restriccion .)
    CHAR            reduce using rule 51 (logico -> restriccion .)
    CIERTO          reduce using rule 51 (logico -> restriccion .)
    FALSO           reduce using rule 51 (logico -> restriccion .)
    (               reduce using rule 51 (logico -> restriccion .)
    +               reduce using rule 51 (logico -> restriccion .)
    -               reduce using rule 51 (logico -> restriccion .)
    LONG            reduce using rule 51 (logico -> restriccion .)
    EXPONENCIAL     reduce using rule 51 (logico -> restriccion .)
    LOGARITMICA     reduce using rule 51 (logico -> restriccion .)
    SENO            reduce using rule 51 (logico -> restriccion .)
    COSENO          reduce using rule 51 (logico -> restriccion .)
    FINMIENTRAS     reduce using rule 51 (logico -> restriccion .)
    FINSI           reduce using rule 51 (logico -> restriccion .)
    SINO            reduce using rule 51 (logico -> restriccion .)
    DEVOLVER        reduce using rule 51 (logico -> restriccion .)
    }               reduce using rule 51 (logico -> restriccion .)
    IgualIgual      shift and go to state 66
    MenorIgual      shift and go to state 67
    MayorIgual      shift and go to state 68
    Igualdad        shift and go to state 69
    <               shift and go to state 70
    >               shift and go to state 71

    comparador                     shift and go to state 65

state 22

    (20) tipo -> BOOLEANO .

    NAME            reduce using rule 20 (tipo -> BOOLEANO .)
    {               reduce using rule 20 (tipo -> BOOLEANO .)


state 23

    (21) tipo -> ENTERO .

    NAME            reduce using rule 21 (tipo -> ENTERO .)
    {               reduce using rule 21 (tipo -> ENTERO .)


state 24

    (22) tipo -> REAL .

    NAME            reduce using rule 22 (tipo -> REAL .)
    {               reduce using rule 22 (tipo -> REAL .)


state 25

    (23) tipo -> CARACTER .

    NAME            reduce using rule 23 (tipo -> CARACTER .)
    {               reduce using rule 23 (tipo -> CARACTER .)


state 26

    (49) restriccion -> expression .
    (66) expression -> expression . + multiplicador
    (67) expression -> expression . - multiplicador
